@@ -9,6 +9,7 @@ Version 1.4.10 - CVS
   - Reduce (largely theoretical) chance of reusing existing attachment
     filenames.
   - Fix rare bug in forwarding as attachment from some search results.
+  - Add warning about magic_quotes_* in configtest.
 
 Version 1.4.9a - 3 December 2006
 --------------------------------
